src/objects/MYBZ_Product_Trend_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Alignment_Level__c</fullName>
        <label>Alignment Level</label>
        <picklist>
            <picklistValues>
                <fullName>DVSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AREA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSTRCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRTRY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dataload_Id__c</fullName>
        <externalId>true</externalId>
        <label>Dataload Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>MYBZ_IHS_Division__c</referenceTo>
        <relationshipLabel>Product Trend Details</relationshipLabel>
        <relationshipName>Product_Trend_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gain_or_Lose_Percentage__c</fullName>
        <label>Gain or Lose Percentage</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gainer_Loser_Top__c</fullName>
        <label>Gainer/Loser/Top</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_or_PGP__c</fullName>
        <label>HCP or PGP</label>
        <picklist>
            <picklistValues>
                <fullName>HCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LE_ID_IHS__c</fullName>
        <label>LE_ID_IHS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_ID_PGP__c</fullName>
        <label>LE_ID_PGP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoadIdentifier__c</fullName>
        <label>LoadIdentifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH( Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PGP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PGP</label>
        <referenceTo>MYBZ_PGP__c</referenceTo>
        <relationshipLabel>Product Trend Details</relationshipLabel>
        <relationshipName>Product_Trend_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Month_TRx__c</fullName>
        <label>Previous Month TRx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <picklist>
            <picklistValues>
                <fullName>6M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System</label>
        <referenceTo>MYBZ_System__c</referenceTo>
        <relationshipLabel>Product Trend Details</relationshipLabel>
        <relationshipName>Product_Trend_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_or_Bottom_PGP_ID__c</fullName>
        <label>Top or Bottom PGP ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_or_Bottom_PGP__c</fullName>
        <label>Top or Bottom PGP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>